# my_esp32_watch_base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp  main.h  nmea_parser.cpp  nmea_parser.h
main/WatchBma/: WatchBma.cpp  WatchBma.h
main/WatchGps/: WatchGps.cpp  WatchGps.h  home_gps_example.h
main/WatchNvs/: WatchNvs.cpp  WatchNvs.h
main/WatchPower/: WatchPower.cpp  WatchPower.h
main/WatchSd/: WatchSd.cpp  WatchSd.h
main/WatchTft/: Bma_Sceen.cpp  Gps_Screen.cpp  Power_Screen.cpp  Settings_Screen.cpp  WatchTft.cpp  WatchTft.h  ampoule.cpp  arrow.cpp  bolt.cpp  circle.cpp  download.cpp  gradient_count.cpp  lune.cpp  main_bg.cpp  rotate.cpp  run.cpp
main/WatchWiFi/: WatchWiFi.cpp  WatchWiFi.h  wifi_credentials_example.h
